{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "a31ea5be-3bf1-4ce3-bc5e-18465f9a5df3",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "1c577b2f-166a-4cf9-a518-39631e2f866d",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Button X",
                    "type": "Button",
                    "id": "63f722b6-12ef-45b1-bc62-761cbe5fa77d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Button O",
                    "type": "Button",
                    "id": "7f126e11-1243-446b-9e58-857a169bfded",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button Square",
                    "type": "Button",
                    "id": "6f5c6512-7b6e-4888-8c40-4c5184fd3ab1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Button Y",
                    "type": "Button",
                    "id": "9eaca8c9-afcb-4306-8dee-eff4a777fc59",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3d16acf5-87ab-4859-960b-ad41a4cd1d34",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea2efa8d-adb7-402a-a238-922c3cfd7a3f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b72c1a0-52c7-4488-a394-3e9b7d135acf",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button O",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c7fcc3a-583e-4629-bfb1-b959e0c6a77e",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button Square",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "292df61e-9a81-4504-8070-6c51d27d0ded",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Button Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}